file : 모듈 재설정 - 6
- cubrid 설정, 코드 migration